@@ -567,3 +567,4 @@ Views 3.x-7.x-dev
     o #816354 by dereine: Provide a field to create administrative comments on displays.
     o #1004596 by pillarsdotnet:  Wrong usage of theme('image'...) in contact field handler.
     o #1006088 by aspilicious: Remove unneeded files from .info file.
+    o #1005662 by troky: Change original hook to base hook in views hook_theme.
